--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"
+    />
   </head>
-  <body class="hold-transition skin-blue sidebar-mini login-page">
+  <body class="hold-transition skin-green sidebar-mini login-page">
     <app-root></app-root>
   </body>
 </html>
