--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
   <body class="hold-transition skin-green sidebar-mini login-page">
     <app-root></app-root>
